Total Life and Energy implemented with GI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/Maps/Test/TestLevel.TestLevel
 EditorStartupMap=/Game/Maps/Test/TestLevel.TestLevel
 GlobalDefaultGameMode=/Script/GearFactory.PlayingGameMode
+GameInstanceClass=/Script/GearFactory.GearFactoryGameInstance
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
