feat: Update initial energy based on level name

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -100,6 +100,9 @@ bSkipMovies=False
 +IniSectionDenylist=HordeStorageServers
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/Test/TestLevel")
++MapsToCook=(FilePath="/Game/Maps/Level01/Level01")
++MapsToCook=(FilePath="/Game/Maps/GameOver/GameOver")
++MapsToCook=(FilePath="/Game/Maps/Title/Title")
 +DirectoriesToAlwaysCook=(Path="/Game")
 bRetainStagedDirectory=False
 CustomStageCopyHandler=
