--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/Test/TestLevel.TestLevel
+GameDefaultMap=/Game/Maps/Title/Title.Title
 EditorStartupMap=/Game/Maps/Test/TestLevel.TestLevel
 GlobalDefaultGameMode=/Script/GearFactory.PlayingGameMode
 GameInstanceClass=/Script/GearFactory.GearFactoryGameInstance
